--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "material-design-icons": "^3.0.1",
+    "string-math": "^1.2.2",
+    "vue": "^2.6.11",
+    "vue-material-design-icons": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
